# chelys

./: .gitignore  .gitmodules  INSTALL.md  README.md  chelys.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: init-submodules.mjs  update-version.mjs
scripts/dev/: test-jabref-ls.sh  test-tinymist.sh
src/: App.tsx  config.ts  i18n-shim.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  process_supervisor.rs  tray.rs  webrtc_bridge.rs
src/components/app/: AppRouter.tsx  DashboardApp.tsx
src/components/auth/: ChelysLogin.tsx
src/components/common/: CollaboratorAvatars.tsx  CopyField.tsx  Icons.tsx  Modal.tsx  PasteField.tsx
src/components/plugin-host/: RecipeBrowser.tsx  RecipeForm.tsx  RecipeList.tsx  RecipeVariables.tsx
src/contexts/: PluginHostContext.tsx  RoomContext.tsx  SettingsContext.tsx
src/hooks/: useAccountStore.ts  usePluginHost.ts  useRoom.ts  useSettings.ts
src/peer/: DocumentLister.ts  DocumentViewer.ts  PeerSession.ts  ProjectMount.ts
src/plugin-host/: PluginTypeRegistry.ts  ProcessSupervisorService.ts  RecipeManager.ts  RecipeRegistry.ts  RecipeStore.ts  activeAccount.ts  platformResolution.ts  types.ts  variableResolution.ts
src/settings/: registry.ts
src/theme/: themeVariant.ts
src/utils/: platformUtils.ts  systemSettings.ts
src/webrtc-polyfill/: RTCDataChannel.ts  RTCPeerConnection.ts  index.ts  install.ts  webrtc-adapter-shim.ts
(+23 files in other folders)
