[package]
name = "chelys-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "chelys_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-positioner = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
webrtc = "0.11"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
bytes = "1"
